@@ -46,6 +46,7 @@ flag=-L$i
 
 [liblink]
 safe=yes
+oneatatime=yes
 cmd=ar rc $o $i
 
 libdir=
