@@ -1,3 +1,7 @@
+SVN from 0.66:
+        - Rebuild: Fixed generation of libraries with DMD+GNU/Linux (see ticket
+          #75).
+
 0.66 from 0.65:
         - Rebuild: Fixed a bug with -listnffiles and -of conflicting (see
           ticket #66).
